--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -87,8 +87,8 @@ jobs:
 
             be_path="/var/www/html/$SUBDOMAIN/backend"
 
-            # Buat folder kalau belum ada
-            ssh root@$VPS_IP "mkdir -p $be_path"
+            # Hapus dan Buat folder be
+            ssh root@$VPS_IP "rm -rf $be_path/* && mkdir -p $be_path"
 
             # Clone repository langsung ke VPS
             ssh root@$VPS_IP "git clone git@github.com:mugiaadha/app-pkm-clenic.git $be_path"
