--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -47,7 +47,7 @@ jobs:
             fe_path="/var/www/html/$SUBDOMAIN/frontend"
 
             ssh root@$VPS_IP "mkdir -p $fe_path"
-            rsync -av "ssh -o ServerAliveInterval=60 -o ServerAliveCountMax=5" --delete --exclude='.git' dist/app-pkm/browser/ root@$VPS_IP:$fe_path/ --log-file=rsync_log.txt
+            rsync -avz -e "ssh -o ServerAliveInterval=60 -o ServerAliveCountMax=5" --delete --exclude='.git' dist/app-pkm/browser/ root@$VPS_IP:$fe_path/ --log-file=rsync_log.txt
           done
 
           for SUBDOMAIN in $INACTIVE_SUBDOMAINS; do
@@ -56,7 +56,7 @@ jobs:
             fe_path="/var/www/html/$SUBDOMAIN/frontend"
 
             ssh root@$VPS_IP "mkdir -p $fe_path"
-            rsync -av "ssh -o ServerAliveInterval=60 -o ServerAliveCountMax=5" --delete --exclude='.git' ./inactive.html root@$VPS_IP:$fe_path/index.html --log-file=rsync_log.txt
+            rsync -avz -e "ssh -o ServerAliveInterval=60 -o ServerAliveCountMax=5" --delete --exclude='.git' ./inactive.html root@$VPS_IP:$fe_path/index.html --log-file=rsync_log.txt
           done
         working-directory: frontend
 
@@ -72,7 +72,7 @@ jobs:
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan -H ${{ secrets.VPS_HOST }} >> ~/.ssh/known_hosts
 
-      - name: Checkout Backend Repo
+      - name: Checkout Backend Repo 
         uses: actions/checkout@v2
         with:
           repository: mugiaadha/app-pkm-clenic
@@ -98,6 +98,6 @@ jobs:
             ssh root@$VPS_IP "mkdir -p $be_path"
 
             # Kirim file menggunakan rsync
-            rsync -av "ssh -o ServerAliveInterval=60 -o ServerAliveCountMax=5" --delete --exclude='.git' ./ root@$VPS_IP:$be_path/ --log-file=rsync_log.txt
+            rsync -avz -e "ssh -o ServerAliveInterval=60 -o ServerAliveCountMax=5" --delete --exclude='.git' ./ root@$VPS_IP:$be_path/ --log-file=rsync_log.txt
           done
         working-directory: backend
