--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -61,7 +61,7 @@ jobs:
         working-directory: frontend
 
   deploy-backend:
-    needs: deploy-frontend
+    # needs: deploy-frontend
     runs-on: ubuntu-latest
 
     steps:
