--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -61,7 +61,7 @@ jobs:
         working-directory: frontend
 
   deploy-backend:
-    # needs: deploy-frontend
+    needs: deploy-frontend
     runs-on: ubuntu-latest
 
     steps:
@@ -83,29 +83,23 @@ jobs:
         run: |
           curl -o cabang-config.json https://wulzrugvpldjbdsxscku.supabase.co/storage/v1/object/public/app-pkm/cabang-config.json
 
-      - name: Compress Backend Folder
-        run: |
-          tar --exclude='.git' -czf backend.tar.gz -C backend .
-        working-directory: .
-
-      - name: Upload and Extract Backend on VPS
+      - name: Deploy Backend to VPS
         run: |
           VPS_IP="${{ secrets.VPS_HOST }}"
 
-          ACTIVE_SUBDOMAINS=$(jq -r '.[] | select(.active == true) | .subdomain' cabang-config.json)
+          ACTIVE_SUBDOMAINS=$(jq -r '.[] | select(.active == true) | .subdomain' ../cabang-config.json)
 
           for SUBDOMAIN in $ACTIVE_SUBDOMAINS; do
             echo "Deploy ke $SUBDOMAIN"
 
             be_path="/var/www/html/$SUBDOMAIN/backend"
 
-            # Buat folder tujuan
+            # Buat folder kalau belum ada
             ssh root@$VPS_IP "mkdir -p $be_path"
 
-            # Upload file .tar.gz
-            scp backend.tar.gz root@$VPS_IP:$be_path/
+            # Kirim file menggunakan rsync
+            rsync -avz -e "ssh -o ServerAliveInterval=60 -o ServerAliveCountMax=5" --delete --exclude='.git' ./ root@$VPS_IP:$be_path/ --log-file=rsync_log.txt
 
-            # Ekstrak di VPS lalu hapus file arsip
-            ssh root@$VPS_IP "tar -xzf $be_path/backend.tar.gz -C $be_path && rm $be_path/backend.tar.gz"
+            sleep 10
           done
-        working-directory: .
+        working-directory: backend
