--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -10,16 +10,27 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        folder: [tabaro.clenicapp.com/test-auto]  # isi folder yang mau di-deploy
+        folder: [tabaro.clenicapp.com/test-auto]
 
     steps:
       - uses: actions/checkout@v3
-
+      
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'  # sesuaikan versi node yang kamu pakai
+      
+      - name: Install dependencies
+        run: npm ci
+      
+      - name: Build app
+        run: npm run build
+      
       - name: FTP Deploy to ${{ matrix.folder }}
         uses: SamKirkland/FTP-Deploy-Action@v4.3.4
         with:
           server: ${{ secrets.FTP_HOST }}
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
-          local-dir: ./build
+          local-dir: ./build/
           server-dir: ./${{ matrix.folder }}
