--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -32,5 +32,5 @@ jobs:
           server: ${{ secrets.FTP_HOST }}
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
-          local-dir: ./build/
+          local-dir: ./app-pkm/
           server-dir: ./${{ matrix.folder }}
