--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -18,6 +18,25 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
+          node-version: "18"
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Build app
+        run: npm run build
+
+      - name: Lihat isi folder setelah build
+        run: ls -lah
+
+      - name: Lihat isi direktori hasil build (jika build di ./app-pkm)
+        run: ls -lah ./app-pkm
+
+      - uses: actions/checkout@v3
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
           node-version: "18" # sesuaikan versi node yang kamu pakai
 
       - name: Install dependencies
