--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -14,42 +14,23 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-
+      
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: "18"
-
+          node-version: '18'  # sesuaikan versi node yang kamu pakai
+      
       - name: Install dependencies
         run: npm ci
-
+      
       - name: Build app
         run: npm run build
-
-      - name: Lihat isi folder setelah build
-        run: ls -lah
-
-      - name: Lihat isi direktori hasil build (jika build di ./app-pkm)
-        run: ls -lah ./app-pkm
-
-      - uses: actions/checkout@v3
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: "18" # sesuaikan versi node yang kamu pakai
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Build app
-        run: npm run build
-
+      
       - name: FTP Deploy to ${{ matrix.folder }}
         uses: SamKirkland/FTP-Deploy-Action@v4.3.4
         with:
           server: ${{ secrets.FTP_HOST }}
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
-          local-dir: ./app-pkm/
+          local-dir: ./dist/app-pkm/
           server-dir: ./${{ matrix.folder }}/test-auto/
