--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -30,6 +30,7 @@ jobs:
         uses: SamKirkland/FTP-Deploy-Action@v4.3.4
         with:
           server: 103.93.56.225
+          port: 2110
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
           local-dir: ./dist/app-pkm/
