--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -4,18 +4,14 @@ on:
   push:
     branches:
       - main
+  workflow_dispatch:
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        folder:
-          [
-            kulam,
-            ulka,
-            meuraxa
-          ]
+        folder: [kulam, ulka, meuraxa]
 
     steps:
       - uses: actions/checkout@v3
