--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -67,4 +67,4 @@ jobs:
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
           local-dir: ./dist/app-pkm/browser/
-          server-dir: ./${{ matrix.folder }}.clenicapp.com/test-auto/
+          server-dir: ./${{ matrix.folder }}.clenicapp.com/v1-test/
